<resources>
    <string name="app_name">SmsReader</string>
    <string name="action_settings">Настройки</string>
    <string name="action_charts">Графики</string>
    <string name="edit_categories">Edit</string>
    <string name="enter_category_name_hint">Введите имя категории</string>
    <string name="enter_search_string_hint">Введите слово для поиска</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="editCategory">Изменить категорию</string>
    <string name="categoryList">Категории</string>
    <string name="smsNoCategory">Sms без категории</string>
    <string name="reports">Отчеты</string>
    <string name="categoryListPrompt">Список существующих категорий</string>
    <string name="smsNoCategoryPrompt">Сюда попадают все смс без категории</string>
    <string name="reportsPrompt">Разные отчеты</string>
</resources>
