<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nikashkuratova.smsreader.AddCategoryActivity">

    <EditText
        android:id="@+id/enterName"
        android:maxLines="1"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category_name_hint" />

    <EditText
        android:id="@+id/enterSearchString"
        android:maxLines="1"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enterName"
        android:hint="@string/enter_search_string_hint" />

    <Button
        android:id="@+id/submitAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/addCategory" />
</RelativeLayout>
